travail sur la vue destinataire

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,6 +45,7 @@
         'js/foundation/jquery.foundation.buttons.js'
         'js/foundation/jquery.foundation.clearing.js'
         'js/foundation/jquery.foundation.forms.js'
+        'js/foundation/jquery.foundation.accordion.js'
      
         filter='?yui_js'
         output='js/all.js'
