mis a place liste contact framework css

--- a/src/Wabbox/LettreBundle/Resources/views/Default/destinataires.html.twig
+++ b/src/Wabbox/LettreBundle/Resources/views/Default/destinataires.html.twig
@@ -17,7 +17,7 @@
 				<ul class="button-group radius">
 					<li><a href="{{ path('personne_edit', { 'id': destinataire.id }) }}" class="button radius">Modifier</a></li>
 					<li><a href="{{ path('personne_delete', { 'id': destinataire.id }) }}" class="button radius">Supprimer</a></li>
-					<li><a href="#" class="button radius">Button 3</a></li>
+					<li><a href="#" class="button radius">Ajouter +</a></li>
 				</ul>
 			</div>
 		</li>
