--- a/web/sass/_settings.scss
+++ b/web/sass/_settings.scss
@@ -29,7 +29,7 @@ $bleu4: #101240;
 // $highlightColor: #ffff99;
  $black: #09090D;
  $white: #fff;
-// $shinyEdge: rgba(#fff, .5);
+ $shinyEdge: rgba(#fff, .5);
 // $darkEdge: rgba(#000, .2);
 
 // Font Settings
